deploy/k8s/deployment-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: private-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
            - name: http
              containerPort: 5000
          volumeMounts:
            - name: config
              mountPath: /etc/docker/registry/config.yml
              subPath: config.yml
              readOnly: true
            - name: certs
              mountPath: /certs
              readOnly: true
            - name: storage
              mountPath: /var/lib/registry
      volumes:
        - name: config
          configMap:
            name: registry-config
        - name: certs
          persistentVolumeClaim:
            claimName: registry-auth-data
            readOnly: true
        - name: storage
          emptyDir: {}
