deploy/k8s/service-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: private-registry
spec:
  selector:
    app: auth
  ports:
    - name: http
      port: 8080
      targetPort: http
