deploy/k8s/service-registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: private-registry
spec:
  selector:
    app: registry
  ports:
    - name: http
      port: 5000
      targetPort: http
